crates/embucket-functions/src/tests/conversion/snapshots/to_binary/query_to_binary_base64.snap
---
source: crates/embucket-functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TO_BINARY('U05PVw==', 'BASE64') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "| 534e4f57     |",
        "+--------------+",
    ],
)
