crates/embucket-functions/src/tests/conversion/snapshots/to_binary/query_to_binary_default_format.snap
---
source: crates/embucket-functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TO_BINARY('SNOW') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "| 534e4f57     |",
        "+--------------+",
    ],
)
