crates/embucket-functions/src/tests/conversion/snapshots/to_binary/query_try_to_binary_valid.snap
---
source: crates/embucket-functions/src/tests/conversion/to_binary.rs
description: "\"SELECT TRY_TO_BINARY('534E4F57', 'HEX') AS binary_value\""
---
Ok(
    [
        "+--------------+",
        "| binary_value |",
        "+--------------+",
        "| 534e4f57     |",
        "+--------------+",
    ],
)
